on peut enfin faire des test et le readme est a jour
