# survey-specs/src/main/resources/api-spec.yaml
@@ -84,9 +84,6 @@ definitions:
   Question:
     type: object
     properties:
-      id:
-        type: integer
-        format: int64 #int64 represents long in java
       title:
         type: string
       used:
@@ -96,4 +93,15 @@ definitions:
         type: integer
         format: int32
       choices:
+        type: array
+        items:
+          $ref: '#/definitions/Choice'
+
+  Choice:
+    type: object
+    properties:
+      position:
+        type: integer
+        format: int32
+      text:
         type: string
